make surfaceflinger a wayland client (initial single window approach)

--- a/services/surfaceflinger/surfaceflinger.rc
+++ b/services/surfaceflinger/surfaceflinger.rc
@@ -1,4 +1,6 @@
 service surfaceflinger /system/bin/surfaceflinger
+    setenv XDG_RUNTIME_DIR /run/
+    setenv WAYLAND_DISPLAY display/wayland-0
     class core
     user system
     group graphics drmrpc readproc
